# xdisplayselect

./: .flake8  pyproject.toml  release.sh
xdisplayselect/: __main__.py  monitor.py  monitor_config.py
