[tool.poetry]
name = "xdisplayselect"
version = "0.0.1"
description = "Utility to simplify controlling monitors on linux WMs"
authors = ["ItsDrike <itsdrike@protonmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/ItsDrike/xdisplayselect"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">3.9,<4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
