[tool.poetry]
name = "xdisplayselect"
version = "0.0.1"
description = "Utility to simplify controlling monitors on linux WMs"
authors = ["ItsDrike <itsdrike@protonmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/ItsDrike/xdisplayselect"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">3.9,<4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-annotations = "^2.9.0"
flake8-bugbear = "^22.7.1"
flake8-future-annotations = "^0.0.5"
flake8-pep585 = {version = "^0.1.5", python = ">=3.9"}
flake8-simplify = "^0.19.2"
flake8-tidy-imports = "^4.8.0"
pep8-naming = "^0.12.1"
black = "^22.3.0"
isort = "^5.10.1"
pyright = "^1.1.264"
pre-commit = "^2.18.1"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
atomic = true
order_by_type = false
case_sensitive = true
combine_as_imports = true
skip = [".venv", ".git"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
